Fix wrong width

--- a/style.less
+++ b/style.less
@@ -2,7 +2,7 @@
 @newsticker-color: black;
 @newsticker-background-color: #F5F3E5;
 @newsticker-ticker-height: 1.95em;
-@newsticker-ticker-width: 50%;
+@newsticker-ticker-width: 90%;
 @newsticker-text-align: center;
 
 ul#tickerlist{
